fixed overflowing to make auto

--- a/client/utils/style.css
+++ b/client/utils/style.css
@@ -197,14 +197,13 @@ p {
 
 /* ----------------------- USER ----------------------- */
 .userFullDiv {
-  /* background-color: bisque; */
   position: fixed;
   z-index: 2;
   height: 100vh;
   width: 25vw;
   margin-bottom: 80px;
   padding-bottom: 100px;
-  overflow-y: scroll;
+  overflow-y: auto;
   border-right: 3px solid black;
 }
 
@@ -295,7 +294,6 @@ p {
 
 /* ----------------------- QUESTION LIST ----------------------- */
 .probListFullDiv {
-  /* background-color: bisque; */
   padding: 15px;
   padding-top: 210px;
 }
@@ -323,7 +321,7 @@ p {
   width: 300px;
   height: 400px;
   margin-top: 30px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .questLabels {
